test/regress/regress-34.txt
;;; TOOL: run-interp-spec
;;; ARGS*: --enable-simd
(module (func (v128.const f32x4  340282356779733623858607532500980858880 340282356779733623858607532500980858880
                                 340282356779733623858607532500980858880 340282356779733623858607532500980858880) drop))
(assert_malformed
  (module quote "(func (v128.const i8x16 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100) drop)")
  "constant out of range"
)
(;; STDOUT ;;;
out/test/regress/regress-34.txt:6: assert_malformed passed:
  out/test/regress/regress-34/regress-34.1.wat:1:25: error: invalid literal "0x100"
  (func (v128.const i8x16 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100...
                          ^^^^^
1/1 tests passed.
;;; STDOUT ;;)
